# contacts-backend

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: contacts.rs  login.rs  main.rs  tests.rs  token.rs  users.rs  utils.rs
